# demo-voice-control

./: CMakeLists.txt  README.md  package.xml  setup.py
commands/: voice_cmd.dic  voice_cmd.kwlist  voice_cmd_.dic  voice_cmd_grip.dic  voice_cmd_grip.kwlist  voice_cmd_teach.dic  voice_cmd_teach.kwlist  voice_cmd_test.dic  voice_cmd_test.kwlist
launch/: gripper_voice_control.launch  teach_voice_control.launch
src/: boilerplate_class.py  boilerplate_node.py  mySModelSimpleController.py  teach_voice_control_node.py  teach_voicecontrol_class.py  test_voice_control.py  test_voice_control_node.py  voicecontrol_class.py
src/gripper/: gripper_voicecontrol_class.py  gripper_voicecontrol_node.py
src/teach/: teach_voicecontrol_class.py  teach_voicecontrol_node.py
src/test/: test_voicecontrol_class.py
