<?xml version="1.0"?>
<package>
  <name>demo_voice_control</name>
  <version>0.0.0</version>
  <description>Standard ROS boilerplate code: C++ and python.</description>
  <maintainer email="felixd@gmail.com">Felix Duvallet</maintainer>
  <author email="felixd@gmail.com">Felix Duvallet</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotiq_ethercat</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotiq_ethercat</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
